// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PokemonsList Component should be able to take a snapshot 1`] = `
<DocumentFragment>
  <div
    class="sc-AxjAm StDqN"
  >
    <ul
      class="sc-AxirZ chGCDH"
    >
      <li
        class="sc-AxiKw hYtiYe"
        data-testid="list-item"
      >
        <div
          class="sc-AxhCb fjiAYs"
        >
          <img
            alt="Pikachu"
            class="sc-fzozJi ubzuZ"
            src="image"
          />
          <h2
            class="sc-AxhUy SGDKj"
          >
            Pikachu
          </h2>
          <p
            class="sc-AxgMl dccyOx"
          >
            #001
          </p>
        </div>
        <div
          class="sc-AxheI CIhFB"
        >
          <div
            class="sc-Axmtr kTUKtH"
          >
            <p
              class="sc-AxmLO irKRQn"
            >
              Electric
            </p>
          </div>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`PokemonsList Component should take a snapshot 1`] = `
<DocumentFragment>
  <div
    class="sc-AxjAm StDqN"
  >
    <ul
      class="sc-AxirZ chGCDH"
    >
      <li
        class="sc-AxiKw hYtiYe"
      >
        <div
          class="sc-AxhCb fjiAYs"
        >
          <img
            alt="Pikachu"
            class="sc-fzozJi ubzuZ"
            data-testid="image"
            src="image"
          />
          <h2
            class="sc-AxhUy SGDKj"
          >
            Pikachu
          </h2>
          <p
            class="sc-AxgMl dccyOx"
          >
            #001
          </p>
        </div>
        <div
          class="sc-AxheI CIhFB"
        >
          <div
            class="sc-Axmtr kTUKtH"
          >
            <p
              class="sc-AxmLO irKRQn"
            >
              Electric
            </p>
          </div>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
